--- a/test.ipynb
+++ b/test.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +242,7 @@
        "[5 rows x 103 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +462,7 @@
        "[5 rows x 101 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1829,7 @@
        "[46 rows x 101 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1853,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1863,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -2516,7 +2517,7 @@
        "[21 rows x 100 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2527,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -3292,13 +3293,69 @@
        "[25 rows x 100 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_unexperience"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_df(df):\n",
+    "    dfs = np.array_split(df, len(df.columns)//5, axis = 1)\n",
+    "    return dfs\n",
+    "\n",
+    "dfs_experience = split_df(df_experience)\n",
+    "dfs_unexperience = split_df(df_unexperience)\n",
+    "\n",
+    "mean_experience = np.array([j.mean().values for j in dfs_experience])\n",
+    "mean_unexperience = np.array([j.mean().values for j in dfs_unexperience])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20, 5)"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def convert_bool(mean_array):\n",
+    "    for i in range(len(mean_array)):\n",
+    "        for j in range(len(mean_array[i])):\n",
+    "            if(mean_array[i][j] > 5):\n",
+    "                mean_array[i][j] = 1\n",
+    "            else:\n",
+    "                mean_array[i][j] = 0\n",
+    "    return mean_array\n",
+    "\n",
+    "\n",
+    "bin_mean_exp = convert_bool(mean_experience)\n",
+    "bin_mean_unexp = convert_bool(mean_unexperience)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n"
    ]
   },
   {
