--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[5 rows x 103 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "[5 rows x 101 columns]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -1829,7 +1829,7 @@
        "[46 rows x 101 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1854,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -2517,7 +2517,7 @@
        "[21 rows x 100 columns]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2528,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -3293,7 +3293,7 @@
        "[25 rows x 100 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3304,7 +3304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3321,20 +3321,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(20, 5)"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def convert_bool(mean_array):\n",
     "    for i in range(len(mean_array)):\n",
@@ -3356,6 +3345,84 @@
    "source": [
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [0., 0., 1., 0., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 0., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [0., 0., 1., 0., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 0., 1., 0.],\n",
+       "       [1., 0., 0., 0., 0.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin_mean_exp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [0., 0., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [0., 0., 1., 1., 1.],\n",
+       "       [1., 0., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 0., 0., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin_mean_unexp"
    ]
   },
   {
