--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[5 rows x 103 columns]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "[5 rows x 101 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1829,7 +1829,7 @@
        "[46 rows x 101 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1854,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2517,7 +2517,7 @@
        "[21 rows x 100 columns]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2528,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3293,7 +3293,7 @@
        "[25 rows x 100 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3304,7 +3304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3321,7 +3321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3349,7 +3349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3377,7 +3377,7 @@
        "       [1., 1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3388,7 +3388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3416,13 +3416,72 @@
        "       [1., 1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bin_mean_unexp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_experience_excel = ([j.mean().to_frame() for j in dfs_experience])\n",
+    "mean_unexperience_excel = ([j.mean().to_frame() for j in dfs_unexperience])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [2, 5, 7]\n",
+    "v = [0, 1, 0.5]\n",
+    "print(np.correlate(a, v, \"valid\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5960395606792696\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = a - np.mean(a)\n",
+    "v = v - np.mean(v)\n",
+    "x1 = np.sum(a**2)\n",
+    "x2 = np.sum(v**2)\n",
+    "x3 = np.sum(a*v)\n",
+    "n = 3\n",
+    "print((n*x3 - np.sum(a)*np.sum(v))/np.sqrt((n*x1 - np.sum(a)**2)*(n*x2 - np.sum(v)**2)))\n"
    ]
   },
   {
